# binius64

./: AGENTS.md  Cargo.toml  README.md
.sisyphus/: boulder.json
.sisyphus/notepads/frida-full-implementation/: learnings.md
.sisyphus/plans/: fri-pcs-additional-step.md  frida-full-implementation.md  frida-implementation.md
crates/arith-bench/: Cargo.toml
crates/arith-bench/benches/: field_mul.rs
crates/arith-bench/src/: lib.rs  monbijou.rs  rijndael.rs  test_utils.rs  tests.rs  underlier.rs
crates/arith-bench/src/arch/: aarch64.rs  mod.rs  portable64.rs  x86_64.rs
crates/arith-bench/src/ghash/: bit_sliced.rs  clmul.rs  mod.rs  soft64.rs
crates/arith-bench/src/polyval/: clmul.rs  mod.rs  soft64.rs
crates/circuits/: AGENTS.md  Cargo.toml
crates/circuits/src/: base64.rs  bytes.rs  concat.rs  fixed_byte_vec.rs  hmac.rs  jwt_claims.rs  lib.rs  multiplexer.rs  popcount.rs  ripemd.rs  rs256.rs  slice.rs
crates/circuits/tests/: gate_fusion_keccak.rs
crates/core/: Cargo.toml
crates/core/src/: constraint_system.rs  consts.rs  error.rs  lib.rs  verify.rs  word.rs
crates/core/test_data/: README.md
crates/examples/: Cargo.toml  README.md
crates/examples/benches/: blake2b.rs  blake2s.rs  ethsign.rs  hashsign.rs  keccak.rs  sha256.rs  sha512.rs
crates/examples/examples/: bitcoin_header_chain.rs  bitcoin_p2pkh.rs  blake2b.rs  blake2s.rs  ethsign.rs  hashsign.rs  keccak.rs  sha256.rs  sha512.rs  zklogin.rs
crates/examples/snapshots/: README.md  blake2b.snap  blake2s.snap  ethsign.snap  hashsign.snap  keccak.snap  sha256.snap  sha512.snap  zklogin.snap
crates/examples/src/: cli.rs  lib.rs  snapshot.rs
crates/field/: AGENTS.md  Cargo.toml
crates/field/benches/: binary_field.rs  binary_field_util.rs  byte_iteration.rs  main_field_binary_ops.rs  main_field_unary_ops.rs  packed_field_element_access.rs  packed_field_init.rs  packed_field_invert.rs  packed_field_iter.rs  packed_field_linear_transform.rs  packed_field_mul_alpha.rs  packed_field_multiply.rs  packed_field_slice_iter.rs  packed_field_spread.rs  packed_field_square.rs  packed_field_utils.rs
crates/field/src/: aes_field.rs  as_packed_field.rs  binary_field.rs  binary_field_arithmetic.rs  byte_iteration.rs  extension.rs  field.rs  ghash.rs  lib.rs  linear_transformation.rs  packed.rs  packed_aes_field.rs  packed_binary_field.rs  packed_extension.rs  packed_extension_ops.rs  packed_ghash.rs  random.rs  tests.rs  transpose.rs  util.rs
crates/frontend/: AGENTS.md  Cargo.toml
crates/frontend/ceck/: Cargo.toml  README.md
crates/frontend/ceck/src/: ast.rs  grammar.pest  main.rs  parser.rs  randblast.rs  smt_check.rs  translate.rs
crates/frontend/ceck/tests/: testsuite.rs
crates/frontend/ceck/testsuite/: assertion_types.ceck  basic_and.ceck  edge_cases.ceck  mixed.ceck  mul.ceck  shift.ceck  smt_edge_cases.ceck  xor.ceck
crates/frontend/src/: lib.rs  stat.rs  util.rs
crates/frontend/tests/: test_assertion_paths.rs
crates/hash/: Cargo.toml
crates/hash/src/: lib.rs  parallel_compression.rs  parallel_digest.rs  serialization.rs  vision.rs
crates/hash/src/vision_4/: compression.rs  constants.rs  digest.rs  mod.rs  parallel_compression.rs  parallel_digest.rs  parallel_permutation.rs  permutation.rs
crates/hash/src/vision_6/: constants.rs  digest.rs  mod.rs  parallel_digest.rs  parallel_permutation.rs  permutation.rs
crates/iop/: Cargo.toml
crates/iop-prover/: Cargo.toml
crates/iop-prover/src/: basefold.rs  lib.rs  naive_channel.rs
crates/iop-prover/src/fri/: commit.rs  error.rs  fold.rs  query.rs  tests.rs
crates/iop-prover/src/merkle_tree/: binary_merkle_tree.rs  mod.rs  prover.rs  tests.rs
crates/iop/src/: basefold.rs  lib.rs  naive_channel.rs
crates/ip-prover/src/: channel.rs  fracaddcheck.rs  lib.rs  prodcheck.rs
crates/ip/src/: channel.rs  (+4 more)
crates/math/: AGENTS.md  Cargo.toml
crates/prover/: AGENTS.md  Cargo.toml
crates/spartan-frontend/: Cargo.toml
crates/spartan-frontend/src/: circuit_builder.rs  circuits.rs  compiler.rs  constraint_system.rs  lib.rs  wire_elimination.rs
crates/spartan-prover/: Cargo.toml
crates/spartan-prover/src/: error.rs  lib.rs  pcs.rs  wiring.rs
crates/spartan-prover/tests/: integration_test.rs
crates/spartan-verifier/: Cargo.toml
crates/spartan-verifier/src/: config.rs  lib.rs  pcs.rs  wiring.rs
crates/transcript/: Cargo.toml
crates/transcript/src/: lib.rs  transcript.rs
crates/transcript/src/fiat_shamir/: buffer.rs  hasher_challenger.rs  mod.rs  sampling.rs
crates/utils/: Cargo.toml  build.rs
crates/utils/src/: bitwise.rs  lib.rs  platform_diagnostics.rs  random_access_sequence.rs  serialization.rs  strided_array.rs
crates/utils/src/rayon/: config.rs  mod.rs
crates/utils/src/rayon/iter/: from_parallel_iterator.rs  indexed_parallel_iterator.rs  into_parallel_iterator.rs  mod.rs  parallel_iterator.rs
crates/utils/src/rayon/slice/: mod.rs  parallel_slice.rs  parallel_slice_mut.rs
crates/verifier/: AGENTS.md  Cargo.toml
crates/verifier/src/: config.rs  error.rs  lib.rs  pcs.rs  verify.rs
crates/verifier/src/and_reduction/: mod.rs  verifier.rs
crates/verifier/src/and_reduction/univariate/: mod.rs  univariate_lagrange.rs  univariate_poly.rs
crates/verifier/src/and_reduction/utils/: constants.rs  mod.rs
crates/verifier/src/fri/: common.rs  error.rs  fold.rs
crates/verifier/src/hash/: compress.rs  mod.rs  serialization.rs
crates/verifier/src/hash/vision_4/: compression.rs  mod.rs  permutation.rs
crates/verifier/src/hash/vision_6/: linear_tables.rs  mod.rs  permutation.rs
crates/verifier/src/merkle_tree/: merkle_tree_vcs.rs  mod.rs  scheme.rs
crates/verifier/src/protocols/: basefold.rs  fracaddcheck.rs  mlecheck.rs  mod.rs  prodcheck.rs  pubcheck.rs
crates/verifier/src/protocols/intmul/: common.rs  error.rs  mod.rs  verify.rs
crates/verifier/src/protocols/shift/: error.rs  mod.rs  monster.rs  shift_ind.rs  verify.rs
crates/verifier/src/protocols/sumcheck/: batch.rs  common.rs  error.rs  mod.rs  verify.rs
crates/verifier/src/ring_switch/: mod.rs  verifier.rs
tools/: check_copyright_notice.py
(+338 files in other folders)
