[package]
name = "binius-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
binius-utils = { path = "../utils" }
bytemuck = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rand = { workspace = true }
