[package]
name = "binius-spartan-prover"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
binius-field = { path = "../field" }
binius-math = { path = "../math" }
binius-transcript = { path = "../transcript" }
binius-spartan-frontend = { path = "../spartan-frontend" }
binius-spartan-verifier = { path = "../spartan-verifier" }
binius-utils = { path = "../utils" }
# Reuse infrastructure from binius-prover
binius-prover = { path = "../prover" }
binius-verifier = { path = "../verifier" }
digest.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
anyhow.workspace = true
binius-math = { path = "../math", features = ["test-utils"] }
rand = { workspace = true, features = ["thread_rng"] }
smallvec.workspace = true

[features]
default = ["rayon"]
rayon = ["binius-utils/rayon"]
